# iladub

./: .gitignore  404.html  CITATION.cff  CLAUDE.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
architecture/: index.html
assertion-proposition/: index.html
baml_src/: agents.baml  clients.baml  generated_recipient.baml  generated_types.baml  generators.baml  ground_propose.baml  ping.baml  reshape_propose.baml
dec/: index.html
demo/: README-etkl-showcase.md  assemble_fhir.py  etkl_1a_showcase.ipynb  etkl_demo_data.py  etkl_viz.py  recognise.py  setup-kernel.sh
demo/contracts/: consultation-contract.ttl
demo/inputs/: konsultationsbericht-zurich.txt
demo/knowledge/: clinical-terms.ttl
docs/: CNAME  architecture.md  assertion-proposition.md  dec.md  etkl.md  four-groundings.md  hol.md  holonic-interaction.md  index.md  manifesto.md  modality-native-targets.md  naming.md  neurosymbolic-first.md  story.md  use-case-fhir.md  use-case-multimodal.md  use-case-transplant-m4.md
docs/loops/: 2026-07-05-table-holon-loop.md  README.md  loop-canvas-template.md
docs/narrative/: scope-evolution.md
docs/w3id/: iladub-htaccess.md
etkl/: index.html
examples/: etkl-conformant.ttl  expansion-request.ttl  holon-grounding-conformant.ttl  patient-contract.ttl  patient-knowledge.ttl  patient-shapes.ttl  promotion.ttl  proposal.ttl  sample-admission.txt
examples/tables/: aggregation-conformant.ttl  aggregation-negative.ttl  basefact-conformant.ttl  basefact-negative.ttl  hier-physical-conformant.ttl  hierarchical-conformant.ttl  pivoted-dimension-conformant.ttl  pivoted-dimension-negative.ttl  (+3 more)
hol/: index.html
holonic-interaction/: index.html
manifesto/: index.html
modality-native-targets/: index.html
naming/: index.html
neurosymbolic-first/: index.html
search/: search_index.json
story/: index.html
tests/: dec-bad.ttl  etkl-bad.ttl  expansion-request-leak.ttl  hol-bad.ttl  holon-grounding-leak.ttl  leak-attempt.ttl  risk-leak.ttl  tab-ambiguous-access-leak.ttl  tab-cardinality-leak.ttl  tab-missing-physical-leak.ttl  tab-multitable-coverage-leak.ttl  tab-orphan-entry-leak.ttl  tab-orphan-row-leak.ttl  tab-overlap-leak.ttl  tab-refinement-leak.ttl  tab-uncovered-column-leak.ttl  tab-wrapped-leak.ttl  test_allen.py  test_baml_propose_smoke.py  test_baml_smoke.py  test_boundary.py  test_bridge.py  test_concept_feed.py  test_databook.py  test_decision.py  test_demo.py  test_escalate.py  test_escalation_shacl.py  test_escalation_vocab.py  test_event_shacl.py  test_event_vocab.py  test_events.py  test_expansion_request.py  test_extract_baml.py  test_feasibility.py  test_governance.py  test_grounding.py  test_grounding_value_constraints.py  test_hga_alignment.py  test_loop.py  (+19 more)
use-case-fhir/: index.html
use-case-multimodal/: index.html
use-case-transplant-m4/: index.html
vocab/: README.md
(+260 files in other folders)
