[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iladub"
version = "0.0.1"
description = "Semantic document compiling"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "François Rosselet" }]
keywords = ["documents", "semantic", "compiler", "extraction", "nlp"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/iladub/iladub"
Repository = "https://github.com/iladub/iladub"
Issues = "https://github.com/iladub/iladub/issues"

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iladub"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
