[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iladub"
version = "0.0.2"
description = "Semantic document compiling"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE"]
authors = [{ name = "François Rosselet" }]
keywords = ["documents", "semantic", "compiler", "extraction", "nlp", "etkl", "ontology"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Text Processing :: Markup",
]
dependencies = [
    "rdflib>=7.0",
    "pyshacl>=0.26",
    "pyyaml>=6.0",
]

[project.scripts]
iladub = "iladub.cli:main"

[project.urls]
Homepage = "https://github.com/iladub/iladub"
Repository = "https://github.com/iladub/iladub"
Issues = "https://github.com/iladub/iladub/issues"
"ET(K)L namespace" = "https://w3id.org/etkl"

[project.optional-dependencies]
baml = [
    "baml-py>=0.60",
    "pydantic>=2.6",
    "typing_extensions>=4.10",
]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
docs = [
    "mkdocs-material>=9",
]
readers = [
    "pdfminer.six>=20221105",
    "openpyxl>=3.1",
    "python-docx>=1.1",
    "beautifulsoup4>=4.12",
]

[tool.hatch.build.targets.wheel]
packages = ["src/iladub"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
